2559 [MP4 Muxer]            support UTF-8 for track names. Patch by Eli Bildirici #68
2558 [XviD Encoder]         changed FourCC to XVID when muxing with FFmpeg (regression of 2546)
2557 [OneClick]             fixed missing audio files if using DGIndexNV (regression of 2554)
2556 [XviD]                 fixed not able to set -masking 2 (regression of 2547)
2555 [Muxer]                fixed using 0 as fps value (regression of 2548)
2554 [OneClick]             fixed an error when both DGIndex* are disabled (regression of 2551). Bug #801
                            fixed some problems when using the DGIndexIM indexer (regression of 2551)
2553 [OneClick]             reset to indexer defaults to remove DGA
2552 [DGIndexIM Indexer]    fixed not able to start job (regression of 2551)
2551 [DGAVCIndex Indexer]   removed DGAVCIndex
     [DGIndexIM Indexer]    added DGIndexIM. it has to be enabled in the settings and
                            the license.txt file has to be placed manually in the directory /tools/dgindexim
     [Indexer]              new default order: DGIndexNV, DGIndexIM, DGIndex, L-SMASH, FFMS
2550 [Aften Encoder]        removed aften encoder. please switch to FFmpeg AC-3.
2549 [XviD Encoder]         added additional log information
2548 [Muxer]                fixed wrong fps value if fps is changed in AVS. Bug #799
2547 [XviD Encoder]         adjusted settings for recent Xvid (requires Xvid 1.3.x)
2546 [FFmpeg Muxer]         added FFmpeg muxer to support ASP elementary streams > 2GB
     [XviD Encoder]         MKV and AVI output will always be muxed with FFmpeg
2545 [Settings]             merged "Always mux mkv encodings" with "use external muxer"
2544 [FFmpeg Encoder]       fixed missing W64 header for large PCM data
2543 [FDK-AAC Encoder]      fixed VBR mode
2542 [Nero AAC Encoder]     fixed not able to start encodes (regression of 2536). Bug #800
2541 [AutoEncode]           fixed unintentional deletion of audio input file