@@ -1,3 +1,4 @@
+2560 [FFmpeg Muxer]         force source FPS (regression of 2546)
 2559 [MP4 Muxer]            support UTF-8 for track names. Patch by Eli Bildirici #68
 2558 [XviD Encoder]         changed FourCC to XVID when muxing with FFmpeg (regression of 2546)
 2557 [OneClick]             fixed missing audio files if using DGIndexNV (regression of 2554)
